# GameHQ

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  start.bat
assets/: release-notes.json
docs/: README.md  architecture.md  branding.md  capture-engine.md  code-signing-policy.md  controller-input.md  database.md  dependency-licenses.md  design-system.md  dev-setup.md  download-verification.md  integration-protocol.md  licensing-audit.md  licensing.md  maintainer-privacy.md  notifications.md  overlay.md  packaging.md  portable-import-inventory.md  privacy-data-flow.md  product-spec.md  release-manifest-security-review.md  replay-buffer.md  roadmap.md  security-and-privacy.md  signpath-application.md  (+6 more)
src/: CMakeLists.txt  main.cpp
src/app/: App.cpp  App.h  ReleaseNotes.cpp  ReleaseNotes.h  StartupManager.cpp  StartupManager.h
src/capture/: AudioCapture.cpp  AudioCapture.h  CaptureUtil.h  FramePumpService.cpp  FramePumpService.h  HdrCapabilities.cpp  HdrCapabilities.h  ReplayExporter.cpp  ReplayExporter.h  ScreenshotService.cpp  ScreenshotService.h  SegmentRecorder.cpp  SegmentRecorder.h  wasapi_shims.h  wgc_shims.h
src/capture/hdr/: GpuToneMapper.cpp  GpuToneMapper.h  HdrToneMapMath.cpp  HdrToneMapMath.h
src/config/: Brand.h.in  CaptureLocations.cpp  CaptureLocations.h  ConfigKeys.h  ConfigManager.cpp  ConfigManager.h  LegacyMigration.cpp  LegacyMigration.h  Paths.cpp  Paths.h  PortableProfileImporter.cpp  PortableProfileImporter.h  SettingsCategories.h
src/core/: ApplicationMutex.cpp  ApplicationMutex.h  GameIdentity.cpp  GameIdentity.h  UpdateMaintenance.cpp  UpdateMaintenance.h  UpdaterHandshake.cpp  UpdaterHandshake.h
src/diagnostics/: Logger.cpp  Logger.h
src/games/: GameDetector.cpp  GameDetector.h
src/input/: ActionCatalog.cpp  ActionCatalog.h  BindingEditorModel.cpp  BindingEditorModel.h  BindingResolver.cpp  BindingResolver.h  BindingRuntime.cpp  BindingRuntime.h  ControlId.cpp  ControlId.h  DualSenseDevice.cpp  DualSenseDevice.h  Gamepad.h  HidCloakMonitor.cpp  HidCloakMonitor.h  HotkeyManager.cpp  HotkeyManager.h  InputEngine.cpp  InputEngine.h  MouseHookDevice.cpp  MouseHookDevice.h  StickNav.h  TapHoldDetector.cpp  TapHoldDetector.h  WinMMDevice.cpp  WinMMDevice.h  XInputDevice.cpp  XInputDevice.h
src/integration/: ExternalGameContext.cpp  ExternalGameContext.h  IntegrationClient.cpp  IntegrationClient.h  IntegrationMessage.h  IntegrationProtocol.cpp  IntegrationProtocol.h  IntegrationService.cpp  IntegrationService.h  LocalIntegrationServer.cpp  LocalIntegrationServer.h
src/launcher/: LauncherMain.cpp  UpdaterPromotion.cpp  UpdaterPromotion.h
src/notify/: NotificationCenter.cpp  NotificationCenter.h
src/overlay/: OverlayManager.cpp  OverlayManager.h
src/security/: ReleaseTrust.cpp  ReleaseTrust.h
src/sound/: SoundEngine.cpp  SoundEngine.h
src/storage/: CaptureDatabase.cpp  CaptureDatabase.h  CaptureQueries.cpp  CaptureQueries.h  CaptureScanner.cpp  CaptureScanner.h  GameIconCache.cpp  GameIconCache.h  GameMetadataBackfill.cpp  GameMetadataBackfill.h  GameRowRepair.cpp  GameRowRepair.h  ThumbnailService.cpp  ThumbnailService.h
src/tray/: TrayIcon.cpp  TrayIcon.h
src/ui/: AppController.cpp  AppController.h  CaptureLibraryService.cpp  CaptureLibraryService.h  CurrentGameService.cpp  CurrentGameService.h  GalleryModel.cpp  GalleryModel.h  SettingsRouter.cpp  SettingsRouter.h  ShellActions.cpp  ShellActions.h
src/ui/qml/: Brand.qml  HelpView.qml  Main.qml  OverlayWindow.qml  SettingsView.qml  Theme.qml  ToastWindow.qml
src/ui/qml/components/: AboutWhatsNewDialog.qml  AccentButton.qml  BulkSelection.qml  CaptureTile.qml  ConfirmDialog.qml  DesktopEmptyState.qml  DesktopGalleryFooter.qml  DesktopGalleryGrid.qml  DesktopGalleryHeader.qml  DesktopSidebar.qml  DialogCloseButton.qml  HelpDialog.qml  Lightbox.qml  MediaStage.qml  NavRepeat.qml  OverlayActionMenu.qml  OverlayCaptureStrip.qml  OverlayFooter.qml  OverlayPreview.qml  OverlaySidebar.qml  PlayerControls.qml  SettingsCategoryButton.qml  SettingsCombo.qml  SettingsPage.qml  SettingsPathField.qml  SettingsRow.qml  SettingsSection.qml  SettingsSlider.qml  SettingsToggle.qml  SidebarItem.qml  TextLink.qml  ThemeBackdrop.qml  TileIconButton.qml  Toast.qml  UpdateBanner.qml  VideoBadge.qml
src/ui/qml/helpers/: SidebarCategories.js  qmldir
src/ui/qml/settings/: AboutSettingsPage.qml  AdvancedSettingsPage.qml  CaptureSettingsPage.qml  FeedbackSettingsPage.qml  GeneralSettingsPage.qml  InputSettingsPage.qml  LibrarySettingsPage.qml  ReplaySettingsPage.qml
src/ui/qml/themes/: CarbonSkin.qml  CobaltSkin.qml  DarkSkin.qml  DraculaSkin.qml  EmeraldSkin.qml  GruvboxSkin.qml  HarborSkin.qml  HighContrastSkin.qml  LightSkin.qml  MidnightSkin.qml  NordSkin.qml  ObsidianSkin.qml  Skin.qml  SynthwaveSkin.qml
src/updater/: UpdaterDataSnapshot.cpp  UpdaterDataSnapshot.h  UpdaterHealth.cpp  UpdaterHealth.h  UpdaterMain.cpp  UpdaterRecovery.cpp  UpdaterRecovery.h  UpdaterStaging.cpp  UpdaterStaging.h  UpdaterSwap.cpp  UpdaterSwap.h  UpdaterTransaction.cpp  UpdaterTransaction.h
src/updates/: GitHubReleaseSource.cpp  GitHubReleaseSource.h  ReleaseInfo.h  UpdateDownloader.cpp  UpdateDownloader.h  UpdateInstaller.cpp  UpdateInstaller.h  UpdatePreflight.cpp  UpdatePreflight.h  UpdateService.cpp  UpdateService.h  VersionNumber.cpp  VersionNumber.h
tests/: CMakeLists.txt  integration_server_fixture.cpp  tst_applicationmutex.cpp  tst_captureiconrefresh.cpp  tst_configmanager.cpp  tst_gameiconcache.cpp  tst_gameidentity.cpp  tst_gamemetadatabackfill.cpp  tst_gamerowrepair.cpp  tst_hdrgputonemap.cpp  tst_hdrtonemap.cpp  tst_integrationclient.cpp  tst_integrationprotocol.cpp  tst_integrationservice.cpp  tst_portableprofileimporter.cpp  tst_releasenotes.cpp  tst_releasetrust.cpp  tst_updatedownloader.cpp  tst_updateinstaller.cpp  tst_updatemaintenance.cpp  tst_updatepreflight.cpp  tst_updatertransaction.cpp  tst_versionnumber.cpp  updater_health_fixture.cpp
tests/fixtures/release-trust/: gamehq-test-vector.json
(+73 files in other folders)
